[gd_scene load_steps=10 format=3 uid="uid://56utpsemujya"]

[ext_resource type="Script" uid="uid://c87sja0wkcw4l" path="res://grenade.gd" id="1_24g56"]
[ext_resource type="Texture2D" uid="uid://diadydfi0y6di" path="res://Assets/weapons/grenade.png" id="2_aeyyv"]
[ext_resource type="Texture2D" uid="uid://dkjieodxyhcf5" path="res://Assets/kenney_particle-pack (1)/PNG (Transparent)/smoke_07.png" id="3_ga5sg"]
[ext_resource type="AudioStream" uid="uid://bas08qamn5bh5" path="res://Assets/explosion.wav" id="4_o1udh"]
[ext_resource type="AudioStream" uid="uid://g50s55b2qsp6" path="res://Assets/grenadepinSFX.wav" id="5_aeyyv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_24g56"]
bounce = 0.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oi1vt"]
radius = 30.0
height = 104.0

[sub_resource type="CircleShape2D" id="CircleShape2D_24g56"]
radius = 357.001

[sub_resource type="Gradient" id="Gradient_ga5sg"]
offsets = PackedFloat32Array(0, 0.744186, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.583256, 0, 1, 1, 0.733333, 0, 0)

[node name="Grenade" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_24g56")
gravity_scale = 0.0
linear_damp = 2.0
script = ExtResource("1_24g56")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.16, 0.16)
texture = ExtResource("2_aeyyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_oi1vt")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_24g56")

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 34
texture = ExtResource("3_ga5sg")
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.21
emission_shape = 1
emission_sphere_radius = 21.93
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 20)
initial_velocity_min = 300.0
initial_velocity_max = 500.0
angle_min = -720.0
angle_max = 290.0
scale_amount_min = 0.08
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_ga5sg")

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_o1udh")

[node name="PinSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aeyyv")
volume_db = -10.0

[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
